...
            <Text style={styles.durationText} testID="session-duration">{ getFormattedDuration(meditationSession.durationMs)}</Text>
        </Div>
        <Div className={styles.rowTwo}>
            <Text style={styles.notesText}>Notes</Text>
            <TextInput
                ref={notesInputRef}
                testID="notes-input"
                style={styles.notesTextInput}
                value={notes}
                onChangeText={handleNotesChange}
                multiline
                placeholder={"Notes about your session"}
                placeholderTextColor={"rgba(255,255,255,0.3)"}
...
                starSize={46}
                StarIconComponent={GradientStar}
                animationConfig={{scale: 1}}
            />
        </Div>
        <Div className={styles.rowFour}>
            <Pressable testID="save-button" onPress={handleSave} style={({pressed}) => [styles.saveButton, pressed && styles.saveButtonPressed]}>
                <Text style={styles.saveButtonText}>Save</Text>
            </Pressable>
        </Div>
        {mediaPicker}
        {viewer}
    </Modal>
...
