...

    return (
        <View style={styles.bar}>
            <Pressable testID="timer-tab" onPress={() => goTo(TIMER_TAB)} style={styles.tab}>
                <Text style={[styles.omText, {color: timerActive ? activeColor : inactiveColor}]}>ॐ</Text>
            </Pressable>
            <Pressable testID="sessions-tab" onPress={() => goTo(SESSIONS_TAB)} style={styles.tab}>
                <MaterialIcons
                    name="temple-buddhist"
                    size={24}
                    color={sessionsActive ? activeColor : inactiveColor}
                />
            </Pressable>
...
